--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title>Modal window</title>
+    <title>Cartas de mi Amorcito</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap" rel="stylesheet">
@@ -19,7 +19,6 @@
     <button class="show-modal">Carta No. 1</button>
     <div class="modal hidden">
       <button class="close-modal">&times;</button>
-      <img src="carta-1.svg" alt="">
     </div>
   </div>
   <script src="script.js"></script>
